BIS-2379 : AFS : Post registrtion task emulation for Shuffling / Archiving